# Bead3

./: CMakeLists.txt  JatekMester.cpp  JatekMester.hpp  README.md  applikacio.cpp  applikacio.hpp  checkbox.cpp  checkbox.hpp  graphics.cpp  main.cpp  widgets.cpp  widgets.hpp
lib/: qwe
unused/: gomb.cpp  gomb.hpp  statictext.cpp  statictext.hpp  textbox.cpp  textbox.hpp
